--- a/server/package.json
+++ b/server/package.json
@@ -5,16 +5,18 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node  --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
-    "start":"node --env-file .env --experimental-strip-types --no-warnings src/server.ts"
+    "dev": "node  --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
+    "start": "node --env-file .env --experimental-strip-types --no-warnings src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@biomejs/biome": "2.0.6",
     "@types/node": "^24.0.10",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "ultracite": "5.0.32"
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
