--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
     "@types/node": "^24.0.10",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-seed": "^0.3.1",
     "typescript": "^5.8.3",
     "ultracite": "5.0.32"
   },
