--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node  --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
-    "start": "node --env-file .env --experimental-strip-types --no-warnings src/server.ts"
+    "start": "node --env-file .env --experimental-strip-types --no-warnings src/server.ts",
+    "db:seed": "node --env-file .env --experimental-strip-types --no-warnings src/db/seed.ts"
+
   },
   "keywords": [],
   "author": "",
